...
        android:layout_margin="10dp">

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_scanQRCode"
            android:text="Scan QR Code"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_searchQRCode"
            android:text="Search QR Code"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_searchUsername"
            android:text="Search Username"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
...
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_viewQRCode"
            android:text="View QR Code"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
...
