...
        android:orientation="vertical"
        android:gravity="center">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/chooseGameListView"
            android:layout_weight="9"
            android:divider="@null"
            android:layout_marginTop="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
...
