<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.SearchUsernameActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <include layout="@layout/toolbar_logout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/buttonQRCode_searchUsername"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:backgroundTint="@color/blue2"
            android:fontFamily="@font/comedysketchdemoregular"
            android:text="Check Username by QR Code"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="24sp"
            android:fontFamily="@font/comedysketchdemoregular"

            android:textAlignment="center" />

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchView_searchUsername"
            android:fontFamily="@font/montserrat_regular"
            app:iconifiedByDefault="false"
            app:queryHint="Enter username ..."/>

    </LinearLayout>


</LinearLayout>