...
            android:id="@+id/textView_userProfile"/>

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_userProfile_viewAllQRCode"
            android:text="\nVIEW ALL QR CODE\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue2"/>
...


        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_userProfile_deleteUser"
            android:text="\nDELETE USER\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"

            android:layout_gravity="center"
            android:backgroundTint="@color/red"
...
